fix(debug kratos template):
